--- a/ScreenTimeout/src/main/res/layout/app_row.xml
+++ b/ScreenTimeout/src/main/res/layout/app_row.xml
@@ -14,8 +14,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="@dimen/padding"
-        android:layout_marginTop="@dimen/padding"
-        android:layout_marginBottom="@dimen/padding"
+        android:layout_centerVertical="true"
         android:layout_alignWithParentIfMissing="true"
         />
 
@@ -27,14 +26,13 @@
         android:ellipsize="end"
         android:layout_marginLeft="@dimen/padding"
         android:layout_marginRight="@dimen/padding"
-        android:layout_marginTop="@dimen/padding"
 
+        android:layout_centerVertical="true"
         android:layout_toRightOf="@id/icon"
-        android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         />
 
-    <TextView android:id="@+id/package_name"
+    <!--TextView android:id="@+id/package_name"
         style="@style/row_font"
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
@@ -48,6 +46,6 @@
         android:layout_toRightOf="@id/icon"
         android:layout_alignParentRight="true"
 
-        />
+        /-->
 
 </com.bywrights.screentimeout.controls.AppRow>
